# CodeAccountant

./: README.md
src/: cli.py  codebuilder_plugin.py  config.py  dependency_checker_plugin.py  gui.py  pyproject.toml  snapshot.py  watcher.py
src/Tests/: test_integration.py
src/dependency_checker_pkg/: README.md  __init__.py  dependency_cli.py  dependency_core.py  pyproject.toml
src/filetracker/: __init__.py  filetracker_cli.py  filetracker_extreme.py  filetracker_extreme_cli.py  plugin_loader.py  utils.py
src/filetracker/test_samples/: scan.jsonl  scan.jsonl.hash  scan.jsonl.sig
src/test_project/: main.c  main.py
